<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Register.Fragment.RegisterAccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/account"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/required"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_green"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_green"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_green"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_green"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_green"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="30dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/queensidesmedium"
                    android:text="@string/new_account"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Account_heading"
                    android:textSize="16sp"
                    android:layout_marginHorizontal="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_star"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="30dp">
                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:background="@drawable/custom_edit_text"
                        android:padding="10dp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/baseline_email_24"
                        android:textSize="18sp"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_star"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="16dp"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="30dp">
                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:background="@drawable/custom_edit_text"
                        android:padding="10dp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/baseline_lock_24"
                        android:textSize="18sp"
                        android:inputType="textPassword"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password_star"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="16dp"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="130dp"
                    app:cardCornerRadius="30dp">
                    <EditText
                        android:id="@+id/confirm_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textSize="18sp"
                        android:background="@drawable/custom_edit_text"
                        android:padding="10dp"
                        android:drawablePadding="5dp"
                        android:drawableLeft="@drawable/baseline_lock_24"
                        android:inputType="textPassword"/>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/done"
                    app:backgroundTint="@color/secondary_stroke_blue"/>

            </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>