<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Register.Fragment.RegisterProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Profile"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:text="@string/required"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_green"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_gray"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_gray"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_gray"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_gray"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:fontFamily="@font/queensidesmedium"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginVertical="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_heading"
                    android:textSize="16sp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_star"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="0dp"
                    app:cardCornerRadius="30dp">
                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:drawableStart="@drawable/ic_name24"
                        android:drawablePadding="5dp"
                        android:background="@drawable/custom_edit_text"
                        android:padding="10dp"
                        android:textSize="18sp"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:padding="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"/>

                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        >

                        <RadioButton
                            android:id="@+id/radioButtonMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textSize="16sp"
                            app:buttonTint="@color/secondary_stroke_blue"/>

                        <RadioButton
                            android:id="@+id/radioButtonFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textSize="16sp"
                            android:layout_marginStart="16dp"
                            app:buttonTint="@color/secondary_stroke_blue"/>


                    </RadioGroup>
                    <EditText
                        android:id="@+id/set_error_edit_text"
                        android:layout_width="75dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/set_error_edit_text"
                        android:enabled="false">

                    </EditText>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_star"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="16dp"
                    android:padding="5dp"
                   />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="60dp"
                    app:cardCornerRadius="30dp">
                    <EditText
                        android:id="@+id/phone_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:drawableStart="@drawable/baseline_local_phone_24"
                        android:drawablePadding="5dp"
                        android:background="@drawable/custom_edit_text"
                        android:padding="10dp"
                        android:textSize="18sp"/>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/next"
                    app:backgroundTint="@color/secondary_stroke_blue" />

                <TextView
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/already_have_an_account"
                    android:layout_marginHorizontal="16dp"
                    android:textColor="@color/secondary_stroke_blue"
                    android:textAllCaps="false"
                    android:gravity="bottom|center"/>

            </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>