<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_x_24"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="end"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/instagramsansregular"
                android:gravity="center"
                android:text="@string/find_your_email"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_layout_text"
                android:hint="@string/email"
                app:hintEnabled="false"
                android:layout_marginHorizontal="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_forget_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:background="@drawable/edittext_background"
                    android:padding="10dp"
                    android:drawablePadding="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:minLines="1"
                    android:textCursorDrawable="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sent_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="32dp"
                android:text="@string/sent"
                app:backgroundTint="@color/secondary_stroke_blue"
                />

        </LinearLayout>


</androidx.cardview.widget.CardView>