<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/vehicle_list_container"
    app:strokeColor="@color/light_black"
    app:cardElevation="8dp"
    android:backgroundTint="@color/light_pink"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="200dp"
                android:layout_margin="8dp"
                app:strokeColor="@color/light_black"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                android:layout_height="match_parent">


            <ImageView
                android:id="@+id/vehicleImageView"
                android:layout_width="200dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/vehiclePlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"


                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isDefaultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"

                android:textSize="18sp"
                android:textColor="@color/light_orange_red"
                >

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/setDefaultBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/set_as_default"
                    >

                </com.google.android.material.button.MaterialButton>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/quantum_googgreen"/>
                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/delete"
                    android:layout_marginBottom="10dp"


                    android:backgroundTint="@color/light_orange_red"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>